change container height

--- a/index.html
+++ b/index.html
@@ -150,22 +150,23 @@
             </div>
             <div class="chat-send">
               <div class="chat-send-toolbar">
-                <div class="chat-send-toolbar-records">
-                  <i class="icon-clock"></i>聊天记录
-                </div>
-                <span class="icon-emoticon-smile active"></span>
-                <span class="icon-paper-clip"></span>
-                <span class="icon-pointer"></span>
-                <span class="icon-plus"></span>
+                <span class="toolbar chat-send-toolbar-records">
+                  <i class="icon-clock"></i><span>聊天记录</span>
+                </span>
+                <i class="toolbar icon-emoticon-smile active"></i>
+                <i class=" toolbar icon-paper-clip"></i>
+                <i class=" toolbar icon-pointer"></i>
+                <i class=" toolbar icon-plus"></i>
               </div>
-              <div class="chat-send-content">
+              <div class="chat-send-content" contenteditable="true">
 
               </div>
-              <div class="chat-send-action">
+              <div class="chat-send-action clearfix">
                 <span class="chat-send-action-tip">
-                  
+                  按Enter键发送消息
                 </span>
-                <a href="#" class="btn btn-default">发送</a>
+                <span  class="btn btn-default">发送</span>
+
               </div>
             </div>
           </div>
