--- a/default.html
+++ b/default.html
@@ -23,6 +23,21 @@
           <a class="btn btn-lg btn-warning">btn-large</a>
           <a class="btn btn-ke btn-danger">btn-ke</a>
         </div>
+        <div class="section-group">
+          <input type="text" class="form-c" value="default" />
+          <div class="form-feedback error right">
+            <input type="text" class="form-c" value="error" />
+            <span class="feedback icon-close"></span>
+          </div>
+          <div class="form-feedback success right">
+            <input type="text" class="form-c" value="success" />
+            <span class="feedback icon-check"></span>
+          </div>
+          <div class="form-feedback left">
+            <input type="search" class="form-c" placeholder="搜索" />
+            <span class="feedback icon-magnifier"></span>
+          </div>
+        </div>
     </div>
   </body>
 </html>
