--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
         <div class="sub-panel">
           <header class="sub-panel-header">
             <span class="btn-add icon-plus"></span>
-            <div class="work-search">
-              <label for="work-search"></label>
-              <i class="work-search-magnifier icon-magnifier"></i>
-              <input type="search" class="work-search-input" id="work-search" placeholder="搜索" />
+            <!--<div class="work-search">-->
+              <!--<label for="work-search"></label>-->
+              <!--<i class="work-search-magnifier icon-magnifier"></i>-->
+              <!--<input type="search" class="work-search-input" id="work-search" placeholder="搜索" />-->
+            <!--</div>-->
+
+            <div class="form-feedback work-search left">
+              <input type="search" class="form-c" placeholder="搜索" />
+              <span class="feedback icon-magnifier"></span>
             </div>
           </header>
 
@@ -39,7 +44,7 @@
                 </div>
 
               </div>
-              <div class="work-item">
+              <div class="work-item active">
                 <time class="work-item-time">17:02</time>
                 <div class="work-item-avator">
                   <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
@@ -127,6 +132,7 @@
                     <div class="bubble left">
                       <pre>我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见</pre>
                       <img src="" alt="" class="message-loading" />
+                      <i class="icon-star"></i>
                       <i class="icon-fail"></i>
                     </div>
                   </div>
@@ -167,6 +173,24 @@
                 </span>
                 <span  class="btn btn-default">发送</span>
 
+              </div>
+              <div class="emotion">
+                <div class="emotion-header">
+                  <div class="emotion-header-inner">
+                    <span class="emotion-header-item"></span>
+                    <span class="emotion-header-item"></span>
+                    <span class="emotion-header-item"></span>
+                  </div>
+                </div>
+                <div class="emotion-bd">
+                  <div class="emotion-bd-item">
+
+                  </div>
+                  <div class="emotion-bd-item"></div>
+                  <div class="emotion-bd-item">
+
+                  </div>
+                </div>
               </div>
             </div>
           </div>
