--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <div class="container">
         <div class="global-panel">
           <div class="global-panel-logo">logo</div>
-          <div class="global-panel-item icon-speech"></div>
-          <div class="global-panel-item icon-notebook"></div>
-          <div class="global-panel-item icon-grid"></div>
+          <div class="global-panel-item active icon-chat"><i class="circle">2</i></div>
+          <div class="global-panel-item icon-contacts"></div>
+          <div class="global-panel-item icon-app"></div>
         </div>
         <div class="sub-panel">
           <header class="sub-panel-header">
@@ -27,7 +27,7 @@
 
             <div class="form-feedback work-search left">
               <input type="search" class="form-c" placeholder="搜索" />
-              <span class="feedback icon-magnifier"></span>
+              <span class="feedback  icon-glyph-115"></span>
             </div>
           </header>
 
@@ -122,7 +122,7 @@
               <div class="chat-messages">
                 <div class="chat-message you">
                   <p class="chat-message-time">
-                    <time>10:30</time>
+                    <time>7/29 10:30</time>
                   </p>
                   <img src="./public/img/zhangqiuyan.jpg" alt="" class="chat-message-avator" width="40" height="40" />
                   <div class="chat-message-content">
