change chat area icon

--- a/index.html
+++ b/index.html
@@ -157,12 +157,12 @@
             <div class="chat-send">
               <div class="chat-send-toolbar">
                 <span class="toolbar chat-send-toolbar-records">
-                  <i class="icon-clock"></i><span>聊天记录</span>
+                  <i class="icon-glyph-101"></i><span>聊天记录</span>
                 </span>
                 <i class="toolbar icon-emoticon-smile active"></i>
-                <i class=" toolbar icon-paper-clip"></i>
-                <i class=" toolbar icon-pointer"></i>
-                <i class=" toolbar icon-plus"></i>
+                <i class=" toolbar icon-glyph-118"></i>
+                <i class=" toolbar icon-glyph-207"></i>
+                <i class=" toolbar icon-app"></i>
               </div>
               <div class="chat-send-content" contenteditable="true">
 
