--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="sub-panel">
           <header class="sub-panel-header">
-            <span class="btn-add icon-plus"></span>
+            <span class="btn-add icon-glyph-102"></span>
             <!--<div class="work-search">-->
               <!--<label for="work-search"></label>-->
               <!--<i class="work-search-magnifier icon-magnifier"></i>-->
