--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <span class="toolbar chat-send-toolbar-records">
                   <i class="icon-glyph-101"></i><span>聊天记录</span>
                 </span>
-                <i class="toolbar icon-emoticon-smile active"></i>
+                <i class="toolbar icon-glyph-10 active"></i>
                 <i class=" toolbar icon-glyph-118"></i>
                 <i class=" toolbar icon-glyph-207"></i>
                 <i class=" toolbar icon-app"></i>
