add application page

--- a/index-copied.html
+++ b/index-copied.html
@@ -16,174 +16,176 @@
           <div class="global-panel-item icon-contacts"></div>
           <div class="global-panel-item icon-app"></div>
         </div>
-        <div class="sub-panel">
-          <header class="sub-panel-header">
-            <span class="btn-add icon-glyph-102"></span>
+        <div class="page-container">
+          <div class="sub-panel">
+            <header class="sub-panel-header">
+              <span class="btn-add icon-glyph-102"></span>
 
-            <div class="form-feedback work-search left">
-              <input type="search" class="form-c" placeholder="搜索" />
-              <span class="feedback  icon-glyph-115"></span>
+              <div class="form-feedback work-search left">
+                <input type="search" class="form-c" placeholder="搜索" />
+                <span class="feedback  icon-glyph-115"></span>
+              </div>
+            </header>
+
+            <div class="sub-panel-content">
+              <div class="work-list">
+                <div class="work-item">
+                  <time class="work-item-time">17:02</time>
+                  <div class="work-item-avator">
+                    <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
+                  </div>
+                  <div class="work-item-info">
+                    <h4>公告</h4>
+                    <p>我爱你再见</p>
+                  </div>
+
+                </div>
+                <div class="work-item active">
+                  <time class="work-item-time">17:02</time>
+                  <div class="work-item-avator">
+                    <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
+                  </div>
+                  <div class="work-item-info">
+                    <h4>SkyeFeng</h4>
+                    <p>我爱你再见</p>
+                  </div>
+
+                </div>
+                <div class="work-item">
+                  <time class="work-item-time">17:02</time>
+                  <div class="work-item-avator">
+                    <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
+                  </div>
+                  <div class="work-item-info">
+                    <h4>Zeus组</h4>
+                    <p>我爱你再见</p>
+                  </div>
+
+                </div>
+                <div class="work-item">
+                  <time class="work-item-time">17:02</time>
+                  <div class="work-item-avator">
+                    <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
+                  </div>
+                  <div class="work-item-info">
+                    <h4>Zeus组</h4>
+                    <p>我爱你再见</p>
+                  </div>
+
+                </div>
+                <div class="work-item">
+                  <time class="work-item-time">17:02</time>
+                  <div class="work-item-avator">
+                    <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
+                  </div>
+                  <div class="work-item-info">
+                    <h4>Zeus组</h4>
+                    <p>我爱你再见</p>
+                  </div>
+
+                </div>
+
+
+
+              </div>
             </div>
-          </header>
 
-          <div class="sub-panel-content">
-            <div class="work-list">
-              <div class="work-item">
-                <time class="work-item-time">17:02</time>
-                <div class="work-item-avator">
-                  <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
-                </div>
-                <div class="work-item-info">
-                  <h4>公告</h4>
-                  <p>我爱你再见</p>
-                </div>
-
-              </div>
-              <div class="work-item active">
-                <time class="work-item-time">17:02</time>
-                <div class="work-item-avator">
-                  <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
-                </div>
-                <div class="work-item-info">
-                  <h4>SkyeFeng</h4>
-                  <p>我爱你再见</p>
-                </div>
-
-              </div>
-              <div class="work-item">
-                <time class="work-item-time">17:02</time>
-                <div class="work-item-avator">
-                  <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
-                </div>
-                <div class="work-item-info">
-                  <h4>Zeus组</h4>
-                  <p>我爱你再见</p>
-                </div>
-
-              </div>
-              <div class="work-item">
-                <time class="work-item-time">17:02</time>
-                <div class="work-item-avator">
-                  <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
-                </div>
-                <div class="work-item-info">
-                  <h4>Zeus组</h4>
-                  <p>我爱你再见</p>
-                </div>
-
-              </div>
-              <div class="work-item">
-                <time class="work-item-time">17:02</time>
-                <div class="work-item-avator">
-                  <img src="./public/img/jinmuyan.jpg" alt="" width="40" height="40" />
-                </div>
-                <div class="work-item-info">
-                  <h4>Zeus组</h4>
-                  <p>我爱你再见</p>
-                </div>
-
-              </div>
-
-
-
-            </div>
           </div>
-
-        </div>
-        <div class="chat-area">
-          <div class="chat-area-inner">
-            <div class="chat-title">
-              <span class="chat-title-name">Alex Liu</span>
-            </div>
-            <div class="chat-room" style="display:none;">
-              <div class="chat-room-inner">
-                <div class="chat-room-search">
-                  <label for="chat-room-search"></label>
-                  <input type="search" id="chat-room-search" />
-                </div>
-                <div class="chat-room-members clearfix">
-                  <div class="chat-room-members-add"></div>
-                  <div class="chat-room-members-minus"></div>
-                  <div class="chat-room-member">
-                    <img src="./public/img/jinmuyan.jpg" alt="" width="47" height="47" />
-                  </div>
-                  <div class="chat-room-member">
-                    <img src="./public/img/jinmuyan.jpg" alt="" width="47" height="47" />
-                  </div>
-                </div>
+          <div class="chat-area">
+            <div class="chat-area-inner">
+              <div class="chat-title">
+                <span class="chat-title-name">Alex Liu</span>
               </div>
-            </div>
-            <div class="chat-content">
-              <div class="chat-messages">
-                <div class="chat-message you">
-                  <p class="chat-message-time">
-                    <time>7/29 10:30</time>
-                  </p>
-                  <img src="./public/img/zhangqiuyan.jpg" alt="" class="chat-message-avator" width="40" height="40" />
-                  <div class="chat-message-content">
-                    <h4 class="chat-message-name">
-                      听说
-                    </h4>
-                    <div class="bubble left">
-                      <pre>我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见</pre>
-                      <img src="" alt="" class="message-loading" />
-                      <i class="icon-star"></i>
-                      <i class="icon-fail"></i>
-                    </div>
+              <div class="chat-room" style="display:none;">
+                <div class="chat-room-inner">
+                  <div class="chat-room-search">
+                    <label for="chat-room-search"></label>
+                    <input type="search" id="chat-room-search" />
                   </div>
-                </div>
-
-
-                <div class="chat-message me">
-                  <p class="chat-message-time">
-                    <time>10:30</time>
-                  </p>
-                  <img src="./public/img/zhangqiuyan.jpg" alt="" class="chat-message-avator" width="40" height="40" />
-                  <div class="chat-message-content">
-                    <div class="bubble right">
-                      <pre>我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见</pre>
-                      <i src="" alt="" class="icon-reload animate-rotate"></i>
-                      <i class="icon-fail"></i>
+                  <div class="chat-room-members clearfix">
+                    <div class="chat-room-members-add"></div>
+                    <div class="chat-room-members-minus"></div>
+                    <div class="chat-room-member">
+                      <img src="./public/img/jinmuyan.jpg" alt="" width="47" height="47" />
+                    </div>
+                    <div class="chat-room-member">
+                      <img src="./public/img/jinmuyan.jpg" alt="" width="47" height="47" />
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="chat-send">
-              <div class="chat-send-toolbar">
+              <div class="chat-content">
+                <div class="chat-messages">
+                  <div class="chat-message you">
+                    <p class="chat-message-time">
+                      <time>7/29 10:30</time>
+                    </p>
+                    <img src="./public/img/zhangqiuyan.jpg" alt="" class="chat-message-avator" width="40" height="40" />
+                    <div class="chat-message-content">
+                      <h4 class="chat-message-name">
+                        听说
+                      </h4>
+                      <div class="bubble left">
+                        <pre>我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见</pre>
+                        <img src="" alt="" class="message-loading" />
+                        <i class="icon-star"></i>
+                        <i class="icon-fail"></i>
+                      </div>
+                    </div>
+                  </div>
+
+
+                  <div class="chat-message me">
+                    <p class="chat-message-time">
+                      <time>10:30</time>
+                    </p>
+                    <img src="./public/img/zhangqiuyan.jpg" alt="" class="chat-message-avator" width="40" height="40" />
+                    <div class="chat-message-content">
+                      <div class="bubble right">
+                        <pre>我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见我爱你再见</pre>
+                        <i src="" alt="" class="icon-reload animate-rotate"></i>
+                        <i class="icon-fail"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="chat-send">
+                <div class="chat-send-toolbar">
                 <span class="toolbar chat-send-toolbar-records">
                   <i class="icon-glyph-101"></i><span>聊天记录</span>
                 </span>
-                <i class="toolbar icon-glyph-10 active"></i>
-                <i class=" toolbar icon-glyph-118"></i>
-                <i class=" toolbar icon-glyph-207"></i>
-                <i class=" toolbar icon-app"></i>
-              </div>
-              <div class="chat-send-content" contenteditable="true">
+                  <i class="toolbar icon-glyph-10 active"></i>
+                  <i class=" toolbar icon-glyph-118"></i>
+                  <i class=" toolbar icon-glyph-207"></i>
+                  <i class=" toolbar icon-app"></i>
+                </div>
+                <div class="chat-send-content" contenteditable="true">
 
-              </div>
-              <div class="chat-send-action clearfix">
+                </div>
+                <div class="chat-send-action clearfix">
                 <span class="chat-send-action-tip">
                   按Enter键发送消息
                 </span>
-                <span  class="btn btn-default">发送</span>
+                  <span  class="btn btn-default">发送</span>
 
-              </div>
-              <div class="emotion">
-                <div class="emotion-header">
-                  <div class="emotion-header-inner">
-                    <span class="emotion-header-item"></span>
-                    <span class="emotion-header-item"></span>
-                    <span class="emotion-header-item"></span>
-                  </div>
                 </div>
-                <div class="emotion-bd">
-                  <div class="emotion-bd-item">
-
+                <div class="emotion">
+                  <div class="emotion-header">
+                    <div class="emotion-header-inner">
+                      <span class="emotion-header-item"></span>
+                      <span class="emotion-header-item"></span>
+                      <span class="emotion-header-item"></span>
+                    </div>
                   </div>
-                  <div class="emotion-bd-item"></div>
-                  <div class="emotion-bd-item">
+                  <div class="emotion-bd">
+                    <div class="emotion-bd-item">
 
+                    </div>
+                    <div class="emotion-bd-item"></div>
+                    <div class="emotion-bd-item">
+
+                    </div>
                   </div>
                 </div>
               </div>
