--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <title>Sample App</title>
@@ -14,6 +14,7 @@
       <footer></footer>
     </div>
     <!--<script src="/static/common.js"></script>-->
+    <!--<script src="public/js/App.bundle.js"></script>-->
     <script src="/static/App.bundle.js"></script>
     <!--<script src="/dist/assets/js/bundle.js"></script>-->
   </body>
